--- a/app/src/main/res/layout/activity_list.xml
+++ b/app/src/main/res/layout/activity_list.xml
@@ -65,6 +65,7 @@
                 android:layout_marginStart="340dp"
                 android:layout_marginTop="570dp"
                 android:layout_marginEnd="24dp"
+                android:contentDescription="@string/User"
                 android:minHeight="48dp"
                 android:rotationX="14"
                 android:src="@drawable/ic_add" />
