--- a/app/src/main/res/layout/activity_list.xml
+++ b/app/src/main/res/layout/activity_list.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:ignore="MissingDefaultResource"
-    android:background="@drawable/gray2">
+    android:background="@drawable/gray2"
+    tools:context=".listActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -25,21 +25,25 @@
             <ImageView
                 android:layout_width="56dp"
                 android:layout_height="59dp"
-                android:src="@drawable/omer" />
+                android:src="@drawable/omer"
+                android:contentDescription="@string/image_description_user" />
+
 
             <TextView
                 android:layout_width="263dp"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="15dp"
+                android:layout_marginStart="15dp"
                 android:layout_marginTop="13dp"
                 android:text="@string/User"
                 android:textSize="25sp" />
+
 
             <ImageView
                 android:layout_width="36dp"
                 android:layout_height="39dp"
                 android:layout_marginTop="13dp"
-                android:src="@drawable/baseline_logout_24" />
+                android:src="@drawable/baseline_logout_24"
+                android:contentDescription="@string/logout_button"  />
         </LinearLayout>
 
         <RelativeLayout
