--- a/app/src/main/res/layout/activity_list.xml
+++ b/app/src/main/res/layout/activity_list.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -22,11 +23,13 @@
             android:orientation="horizontal"
             android:padding="20dp">
 
-            <ImageView
-                android:layout_width="56dp"
-                android:layout_height="59dp"
+            <com.mikhaellopez.circularimageview.CircularImageView
+                android:layout_width="60dp"
+                android:layout_height="60dp"
+                android:background="#00989898"
                 android:src="@drawable/omer"
-                android:contentDescription="@string/image_description_user" />
+                app:civ_border_color="#00989898"
+                tools:ignore="MissingConstraints" />
 
 
             <TextView
