--- a/app/src/main/res/layout/contact_style.xml
+++ b/app/src/main/res/layout/contact_style.xml
@@ -9,14 +9,16 @@
         android:orientation="horizontal"
         android:layout_height="wrap_content"
         tools:ignore="MissingConstraints">
-        <ImageView
 
-            android:layout_width="56dp"
-            android:layout_height="59dp"
+        <com.mikhaellopez.circularimageview.CircularImageView
+            android:layout_width="60dp"
+            android:layout_height="60dp"
             android:src="@drawable/modiin"
-            tools:ignore="MissingConstraints"
-            tools:layout_editor_absoluteX="30dp"
-            tools:layout_editor_absoluteY="168dp" />
+            app:civ_border_color_end="#00989898"
+
+            app:civ_border_color_start="#00989898"
+            tools:ignore="MissingConstraints" />
+
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -25,26 +27,29 @@
             <TextView
                 android:layout_width="200dp"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="15dp"
+                android:layout_marginStart="15dp"
                 android:layout_marginTop="1dp"
                 android:text="@string/friend"
                 android:textSize="25sp" />
 
+
             <TextView
                 android:layout_width="206dp"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="15dp"
+                android:layout_marginStart="15dp"
                 android:layout_marginTop="1dp"
                 android:text="@string/lastMessage"
                 android:textSize="20sp" />
+
         </LinearLayout>
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="40pt"
+            android:layout_marginStart="40pt"
             android:layout_marginTop="5pt"
-            android:text="@string/date"
-            />
+            android:text="@string/date" />
+
+
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
