--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -16,5 +16,6 @@
     <color name="dark_blue">#00008B</color>
     <color name="dark_orange">#FF8C00</color>
     <color name="purple">#800080</color>
+    <color name="palegoldenrod">#EEE8AA</color>
 
 </resources>
