--- a/app/src/main/res/layout/chats_style.xml
+++ b/app/src/main/res/layout/chats_style.xml
@@ -52,7 +52,6 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:paddingStart="20dp"
-
             android:text="@string/username"
             android:textSize="25sp"
             tools:ignore="RtlSymmetry"
@@ -60,7 +59,23 @@
     </LinearLayout>
 
 
+    <ListView
+        android:id="@+id/list_view"
+        android:layout_width="405dp"
+        android:layout_height="599dp"
+        android:paddingTop="5dp"
+        app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
+        android:divider="@drawable/divider"
+        android:dividerHeight="7dp"
+        tools:listitem="@layout/message_style" />
+
+
     <LinearLayout
+        android:id="@+id/linearLayout3"
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:background="@color/gray_background"
@@ -86,25 +101,25 @@
             android:id="@+id/chatInputEditText"
             android:layout_width="0dp"
             android:layout_height="48dp"
-            android:layout_weight="1"
             android:layout_marginTop="1dp"
-            android:padding="10dp"
+            android:layout_weight="1"
+            android:autofillHints=""
             android:background="@drawable/rounded_edittext_background"
             android:hint="@string/placholder"
-            android:textColorHint="@color/white"
-            android:autofillHints=""
-            android:inputType="text"/>
+            android:inputType="text"
+            android:padding="10dp"
+            android:textColorHint="@color/white" />
 
         <ImageView
             android:id="@+id/imageView3"
             android:layout_width="wrap_content"
             android:layout_height="48dp"
+            android:layout_marginTop="1dp"
             android:background="@drawable/the_send_btn_background"
+            android:contentDescription="@string/todo"
             android:paddingStart="15dp"
             android:paddingEnd="10dp"
-            android:layout_marginTop="1dp"
-            app:srcCompat="@drawable/round_send_24"
-            android:contentDescription="@string/todo" />
+            app:srcCompat="@drawable/round_send_24" />
 
     </LinearLayout>
 
