--- a/app/src/main/res/layout/register.xml
+++ b/app/src/main/res/layout/register.xml
@@ -77,6 +77,7 @@
     </LinearLayout>
 
     <LinearLayout
+        android:id="@+id/linearLayout4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintBottom_toTopOf="@+id/linearLayout"
@@ -91,18 +92,18 @@
             android:id="@+id/imageView4"
             android:layout_width="90dp"
             android:layout_height="90dp"
+            android:contentDescription="TODO"
             android:src="@drawable/favicon"
             tools:layout_editor_absoluteX="63dp"
-            tools:layout_editor_absoluteY="77dp"
-            android:contentDescription="TODO" />
+            tools:layout_editor_absoluteY="77dp" />
 
         <TextView
             android:id="@+id/textView"
             android:layout_width="90dp"
             android:layout_height="match_parent"
+            android:gravity="center"
             android:text="@string/lol"
             android:textAlignment="center"
-            android:gravity="center"
             android:textSize="25sp"
             android:textStyle="bold"
             tools:layout_editor_absoluteX="189dp"
@@ -119,5 +120,41 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
+        app:layout_constraintVertical_bias="0.257" />
+
+    <LinearLayout
+        android:layout_width="368dp"
+        android:layout_height="64dp"
+        android:orientation="horizontal"
+        android:paddingStart="80dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btnRegister"
+        tools:ignore="RtlSymmetry">
+
+        <TextView
+            android:id="@+id/textView2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/registered" />
+
+        <Button
+            android:id="@+id/button3"
+            android:layout_width="80dp"
+            android:layout_height="wrap_content"
+            android:background="none"
+            android:text="@string/btn_click_to_register_or_login"
+            android:textAllCaps="false"
+            android:textColor="@color/blue" />
+
+        <TextView
+            android:id="@+id/textView3"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/to_login" />
+    </LinearLayout>
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
