--- a/app/src/main/res/layout/activity_list.xml
+++ b/app/src/main/res/layout/activity_list.xml
@@ -23,13 +23,13 @@
             android:orientation="horizontal"
             android:padding="20dp">
 
-            <com.mikhaellopez.circularimageview.CircularImageView
-                android:layout_width="60dp"
-                android:layout_height="60dp"
-                android:background="#00989898"
-                android:src="@drawable/omer"
-                app:civ_border_color="#00989898"
-                tools:ignore="MissingConstraints" />
+<!--            <com.mikhaellopez.circularimageview.CircularImageView-->
+<!--                android:layout_width="60dp"-->
+<!--                android:layout_height="60dp"-->
+<!--                android:background="#00989898"-->
+<!--                android:src="@drawable/omer"-->
+<!--                app:civ_border_color="#00989898"-->
+<!--                tools:ignore="MissingConstraints" />-->
 
 
             <TextView
@@ -56,7 +56,7 @@
             android:background="@drawable/gray2">
 
             <ListView
-                android:id="@+id/list_view"
+                android:id="@+id/listOfFriend"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 tools:listitem="@layout/contact_style" />
