--- a/app/src/main/res/layout/chats_style.xml
+++ b/app/src/main/res/layout/chats_style.xml
@@ -36,7 +36,7 @@
             android:background="@drawable/circular_background">
 
             <ImageView
-                android:id="@+id/imageView"
+                android:id="@+id/profileUser"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:padding="5dp"
@@ -47,7 +47,7 @@
         </FrameLayout>
 
         <TextView
-            android:id="@+id/textView4"
+            android:id="@+id/user_Name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
