updating the register page

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -66,7 +66,7 @@
         android:id="@+id/button3"
         android:layout_width="80dp"
         android:layout_height="wrap_content"
-        android:background="@color/gray_background"
+        android:background="@color/transparent"
         android:textColor="@color/blue"
         android:textAllCaps="false"
         android:text="@string/btn_click_to_register_or_login" />
