--- a/app/src/main/res/layout/settings.xml
+++ b/app/src/main/res/layout/settings.xml
@@ -65,7 +65,7 @@
         android:autofillHints="" />
 
     <Button
-        android:id="@+id/button4"
+        android:id="@+id/button_red"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/color1"
@@ -75,7 +75,7 @@
         tools:ignore="MissingConstraints" />
 
     <Button
-        android:id="@+id/button5"
+        android:id="@+id/button_green"
         android:background="@color/dark_green"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -85,7 +85,7 @@
         tools:ignore="MissingConstraints" />
 
     <Button
-        android:id="@+id/button6"
+        android:id="@+id/button_blue"
         android:background="@color/dark_blue"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -95,7 +95,7 @@
         tools:ignore="MissingConstraints" />
 
     <Button
-        android:id="@+id/button7"
+        android:id="@+id/button_purple"
         android:background="@color/purple"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -105,7 +105,7 @@
         tools:ignore="MissingConstraints" />
 
     <Button
-        android:id="@+id/button8"
+        android:id="@+id/button_orange"
         android:background="@color/dark_orange"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -115,7 +115,7 @@
         tools:ignore="MissingConstraints" />
 
     <Button
-        android:id="@+id/button9"
+        android:id="@+id/button_default"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/color6"
