--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -63,7 +63,7 @@
         android:text="@string/not_registered" />
 
     <Button
-        android:id="@+id/button3"
+        android:id="@+id/clickToRegister"
         android:layout_width="80dp"
         android:layout_height="wrap_content"
         android:background="@color/gray_background"
