--- a/app/src/main/res/layout/message_style.xml
+++ b/app/src/main/res/layout/message_style.xml
@@ -6,18 +6,19 @@
     android:layout_height="match_parent">
 
     <LinearLayout
+        android:id="@+id/layoutMessage"
         android:layout_width="325dp"
         android:layout_height="0dp"
         android:layout_weight="1"
         android:orientation="vertical"
         android:backgroundTintMode="@color/white"
-        android:background="@drawable/message_rounded_style"
+        android:background="@drawable/message_sender"
         android:layout_marginBottom="5dp"
         app:layout_constraintTop_toTopOf="parent"
         tools:ignore="MissingConstraints">
 
         <TextView
-            android:id="@+id/textView10"
+            android:id="@+id/contentMessage"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/message_content"
@@ -26,7 +27,7 @@
             tools:ignore="RtlSymmetry" />
 
         <TextView
-            android:id="@+id/textView7"
+            android:id="@+id/timeMessage"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/time_of_message"
