--- a/app/src/main/res/layout/register.xml
+++ b/app/src/main/res/layout/register.xml
@@ -141,10 +141,9 @@
             android:text="@string/registered" />
 
         <Button
-            android:id="@+id/button3"
-            android:layout_width="80dp"
+            android:id="@+id/clickToLogin"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:background="none"
             android:text="@string/btn_click_to_register_or_login"
             android:textAllCaps="false"
             android:textColor="@color/blue" />
