--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -17,5 +17,6 @@
     <color name="dark_orange">#FF8C00</color>
     <color name="purple">#800080</color>
     <color name="palegoldenrod">#EEE8AA</color>
+    <color name="mintcream">#f5fffa</color>
 
 </resources>
