--- a/app/src/main/res/layout/settings.xml
+++ b/app/src/main/res/layout/settings.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:id="@+id/constraint"
     android:background="@drawable/gray2"
 
     >
@@ -28,20 +29,28 @@
         android:id="@+id/editTextTextEmailAddress"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:autofillHints=""
         android:ems="10"
         android:inputType="textEmailAddress"
-        tools:layout_editor_absoluteX="101dp"
-        tools:layout_editor_absoluteY="188dp"
-        tools:ignore="LabelFor,MissingConstraints"
-        android:autofillHints="" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.497"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.272"
+        tools:ignore="LabelFor,MissingConstraints" />
 
     <TextView
         android:id="@+id/textView6"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="60dp"
+        android:layout_height="30dp"
         android:text="@string/Edit_URL"
-        tools:layout_editor_absoluteX="25dp"
-        tools:layout_editor_absoluteY="202dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.087"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.443"
         tools:ignore="MissingConstraints" />
 
     <Button
@@ -49,69 +58,97 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/save"
-        tools:layout_editor_absoluteX="317dp"
-        tools:layout_editor_absoluteY="187dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.978"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.27"
         tools:ignore="MissingConstraints" />
 
     <EditText
         android:id="@+id/editTextTextEmailAddress2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:autofillHints=""
         android:ems="10"
         android:inputType="textEmailAddress"
-        tools:layout_editor_absoluteX="106dp"
-        tools:layout_editor_absoluteY="300dp"
-        tools:ignore="MissingConstraints"
-        android:autofillHints="" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.497"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.453"
+        tools:ignore="MissingConstraints" />
 
     <Button
         android:id="@+id/button_red"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/color1"
         android:background="@color/dark_red"
-        tools:layout_editor_absoluteX="45dp"
-        tools:layout_editor_absoluteY="372dp"
+        android:text="@string/color1"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.151"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.547"
         tools:ignore="MissingConstraints" />
 
     <Button
         android:id="@+id/button_green"
-        android:background="@color/dark_green"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:background="@color/dark_green"
         android:text="@string/color2"
-        tools:layout_editor_absoluteX="162dp"
-        tools:layout_editor_absoluteY="374dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.52"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.547"
         tools:ignore="MissingConstraints" />
 
     <Button
         android:id="@+id/button_blue"
-        android:background="@color/dark_blue"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:background="@color/dark_blue"
         android:text="@string/color3"
-        tools:layout_editor_absoluteX="291dp"
-        tools:layout_editor_absoluteY="374dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.9"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.547"
         tools:ignore="MissingConstraints" />
 
     <Button
         android:id="@+id/button_purple"
-        android:background="@color/purple"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:background="@color/purple"
         android:text="@string/color4"
-        tools:layout_editor_absoluteX="47dp"
-        tools:layout_editor_absoluteY="446dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.151"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.658"
         tools:ignore="MissingConstraints" />
 
     <Button
         android:id="@+id/button_orange"
-        android:background="@color/dark_orange"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:background="@color/dark_orange"
         android:text="@string/color5"
-        tools:layout_editor_absoluteX="168dp"
-        tools:layout_editor_absoluteY="450dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.658"
         tools:ignore="MissingConstraints" />
 
     <Button
@@ -119,18 +156,26 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/color6"
-        tools:layout_editor_absoluteX="291dp"
-        tools:layout_editor_absoluteY="448dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.9"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.658"
         tools:ignore="MissingConstraints" />
 
     <TextView
         android:id="@+id/textView8"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="115dp"
+        android:layout_height="41dp"
         android:text="@string/Theme"
-        android:textSize="40sp"
-        tools:layout_editor_absoluteX="135dp"
-        tools:layout_editor_absoluteY="274dp"
+        android:textSize="35sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.476"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.433"
         tools:ignore="MissingConstraints" />
 
     <TextView
@@ -138,8 +183,12 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/current_URL"
-        tools:layout_editor_absoluteX="168dp"
-        tools:layout_editor_absoluteY="202dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.448"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.283"
         tools:ignore="MissingConstraints" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
