--- a/app/src/main/res/layout/activity_list.xml
+++ b/app/src/main/res/layout/activity_list.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     tools:ignore="MissingDefaultResource"
     android:background="@drawable/gray2"
-    tools:context=".ListActivity">
+    tools:context=".activity.ListActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
