--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -1,5 +1,5 @@
 <resources>
-    <style name="Theme.Exe3" parent="Theme.AppCompat">
+    <style name="Theme.Exe3" parent="Theme.AppCompat.NoActionBar">
         <!-- Customize other attributes as needed -->
         <item name="android:windowBackground">@android:color/black</item>
     </style>
