--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -4,7 +4,7 @@
 <!--    <style name="Theme.Exe3" parent="Theme.AppCompat.Light.NoActionBar" />-->
 <!--</resources>-->
 <resources>
-<style name="Theme.Exe3" parent="Theme.AppCompat.Light">
+<style name="Theme.Exe3" parent="Theme.AppCompat.Light.NoActionBar">
     <!-- Customize other attributes as needed -->
     <item name="android:windowBackground">@android:color/white</item>
 </style>
