--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,18 +15,18 @@
         android:padding="20dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        tools:ignore="MissingConstraints">
-
+        tools:ignore="MissingConstraints"
+        tools:layout_editor_absoluteX="34dp">
 
         <EditText
             android:id="@+id/username_input"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="10dp"
+            android:autofillHints=""
             android:ems="10"
             android:hint="@string/username"
             android:inputType="text"
-            android:autofillHints=""
             android:minHeight="48dp" />
 
         <EditText
@@ -34,55 +34,53 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="10dp"
+            android:autofillHints=""
             android:ems="10"
-
             android:hint="@string/password"
             android:inputType="textPassword"
-            android:minHeight="48dp"
-            android:autofillHints="" />
-
+            android:minHeight="48dp" />
 
         <Button
             android:id="@+id/loginButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:text="@string/login_btn"
-            android:background="@drawable/rounded_button" />
-<LinearLayout
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:orientation="horizontal"
-    android:padding="20dp">
+            android:background="@drawable/rounded_button"
+            android:text="@string/login_btn" />
 
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:padding="20dp">
 
-    <TextView
-        android:id="@+id/textView2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/not_registered" />
+            <TextView
+                android:id="@+id/textView2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/not_registered" />
 
-    <Button
-        android:id="@+id/clickToRegister"
-        android:layout_width="80dp"
-        android:layout_height="wrap_content"
-        android:background="@color/transparent"
-        android:textColor="@color/blue"
-        android:textAllCaps="false"
-        android:text="@string/btn_click_to_register_or_login" />
+            <Button
+                android:id="@+id/clickToRegister"
+                android:layout_width="80dp"
+                android:layout_height="wrap_content"
+                android:background="@color/transparent"
+                android:text="@string/btn_click_to_register_or_login"
+                android:textAllCaps="false"
+                android:textColor="@color/blue" />
 
-    <TextView
-        android:id="@+id/textView3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/to_register" />
+            <TextView
+                android:id="@+id/textView3"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/to_register" />
 
-</LinearLayout>
-
+        </LinearLayout>
 
     </LinearLayout>
 
     <LinearLayout
+        android:id="@+id/linearLayout2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintBottom_toTopOf="@+id/linearLayout"
@@ -105,12 +103,26 @@
             android:id="@+id/textView"
             android:layout_width="90dp"
             android:layout_height="match_parent"
+            android:gravity="center"
             android:text="@string/lol"
             android:textAlignment="center"
-            android:gravity="center"
             android:textSize="25sp"
             android:textStyle="bold"
             tools:layout_editor_absoluteX="189dp"
             tools:layout_editor_absoluteY="112dp" />
     </LinearLayout>
+
+    <ImageView
+        android:id="@+id/settings"
+        android:layout_width="36dp"
+        android:layout_height="39dp"
+        android:contentDescription="@string/logout_button"
+        android:src="@drawable/baseline_settings_24"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="@+id/linearLayout"
+        app:layout_constraintHorizontal_bias="0.933"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.039" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
