--- a/app/src/main/res/layout/chats_style.xml
+++ b/app/src/main/res/layout/chats_style.xml
@@ -89,7 +89,7 @@
             android:textColorHint="@color/white" />
 
         <ImageView
-            android:id="@+id/imageView3"
+            android:id="@+id/addMessage"
             android:layout_width="wrap_content"
             android:layout_height="48dp"
             android:layout_marginTop="1dp"
