starting create web

--- a/app/src/main/res/layout/activity_list.xml
+++ b/app/src/main/res/layout/activity_list.xml
@@ -23,7 +23,7 @@
             android:padding="20dp">
 
             <ImageView
-                android:id="@+id/profileImage"
+                android:id="@+id/profileImageUser"
                 android:layout_width="60dp"
                 android:layout_height="60dp"
                 android:contentDescription="TODO"
@@ -32,6 +32,7 @@
                 tools:layout_editor_absoluteY="77dp" />
 
             <TextView
+                android:id="@+id/nameOfUser"
                 android:layout_width="263dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="15dp"
