--- a/app/src/main/res/layout/adding_friend.xml
+++ b/app/src/main/res/layout/adding_friend.xml
@@ -6,7 +6,7 @@
     android:orientation="vertical"
     android:padding="16dp"
     android:background="#F5F5F5"
-    tools:context=".Adding">
+    tools:context=".activity.Adding">
 
     <TextView
         android:layout_width="wrap_content"
