--- a/app/src/main/res/layout/chats_style.xml
+++ b/app/src/main/res/layout/chats_style.xml
@@ -56,13 +56,18 @@
 
     <ListView
         android:id="@+id/messagesList"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_marginTop="28pt"
+        android:layout_marginBottom="17pt"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
         android:divider="@drawable/divider"
         android:dividerHeight="7dp"
         android:paddingTop="14dp"
         android:paddingBottom="14dp"
+        app:layout_constraintBottom_toTopOf="@id/inputBox"
         app:layout_constraintTop_toBottomOf="@+id/boxUser"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
         tools:listitem="@layout/message_style" />
 
     <LinearLayout
@@ -86,6 +91,7 @@
             android:hint="@string/placholder"
             android:inputType="text"
             android:padding="10dp"
+            android:textColor="@color/white"
             android:textColorHint="@color/white" />
 
         <ImageView
