--- a/app/src/main/res/layout/message_style.xml
+++ b/app/src/main/res/layout/message_style.xml
@@ -10,6 +10,8 @@
         android:layout_height="wrap_content">
 
         <LinearLayout
+            android:paddingTop="5pt"
+            android:paddingBottom="5pt"
             android:id="@+id/layoutMessage"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
