--- a/app/src/main/res/layout/settings.xml
+++ b/app/src/main/res/layout/settings.xml
@@ -54,7 +54,7 @@
         tools:ignore="MissingConstraints" />
 
     <Button
-        android:id="@+id/button2"
+        android:id="@+id/save_new_url"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/save"
