--- a/Android/app/src/main/res/layout/contact_style.xml
+++ b/Android/app/src/main/res/layout/contact_style.xml
@@ -38,7 +38,9 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="15dp"
                 android:layout_marginTop="1dp"
-                android:textSize="20sp" />
+                android:textSize="20sp"
+                android:maxLines="1"
+                android:ellipsize="end" />
 
         </LinearLayout>
 
